# ballkicker-robot

./: .gitignore  LICENSE  README.md
ASTREE/1/: 1.ini
ASTREE/1/1/: astree.aalgen  astree.dax  astree.db  astree.db.aal  astree.files  astree.ide  astree.ids  astree.ini  astree.points  astree.sdb  astree.syntree  astree.wrg  current.hst  rules-cxx-analysis.xml  rules-cxx.ide  rules-cxx.json
ASTREE/1/1/original/: 0052387265cc  127c45e37c66  17075eb73260  2824789deb88  5b29620ab31a  6b8783083a78  7da7d2fd353f  965a38f0b179  9d6add773141  9e1be871d74d  a6377b736215  b0e516b66b6d  b34dae0763a0  b4238bb9042c  bd99e7c6a138  c76714782214  c9b58c481d22  cb522b8cbf8a  cda5f8aa67c2  ce4791674961  ce928aa6fd82  e36a2d4baaba  e936fce1c25f  eab55b2d4bae  files.db
ASTREE/1/1/preprocessed/: 0a86549ad7b7  1d027b575ce4  48da02a6fd5f  76748b4477f4  779f637f47ca  a806b62cfa88  acd0b9c6c0d0  c066d4416254  d452e32ba66b  e783077dbcd3  eaac3f1ef530  files.db
src/ballkicker/: CMakeLists.txt  beep.c  beep.h  main.c  reset_brick.c
src/ballkicker/linuxheaders/: unistd.h
